--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "mcp-farmer",
+  "description": "A CLI tool for scaffolding and analyzing MCP (Model Context Protocol) servers",
   "module": "cli.ts",
   "version": "0.1.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/boldare/mcp-farmer.git"
+  },
   "type": "module",
   "private": true,
+  "author": "Boldare",
   "scripts": {
     "type-check": "tsc --noEmit",
     "test": "bun test",
