--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "scripts": {
     "type-check": "tsc --noEmit",
     "test": "bun test",
+    "lint": "eslint .",
     "format": "prettier . --write"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@types/bun": "latest",
-    "prettier": "3.7.4"
+    "eslint": "^9.39.1",
+    "prettier": "3.7.4",
+    "typescript-eslint": "^8.49.0"
   },
   "peerDependencies": {
     "typescript": "^5"
