--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@eslint/js": "^9.39.1",
     "@types/bun": "latest",
     "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
     "prettier": "3.7.4",
     "typescript-eslint": "^8.49.0"
   },
