--- a/package.json
+++ b/package.json
@@ -54,18 +54,18 @@
   "devDependencies": {
     "@commitlint/cli": "^20.2.0",
     "@commitlint/config-conventional": "^20.2.0",
-    "@eslint/js": "^9.39.1",
-    "@types/bun": "latest",
-    "@types/node": "^22.10.2",
-    "eslint": "^9.39.1",
+    "@eslint/js": "^9.39.2",
+    "@types/bun": "^1.3.4",
+    "@types/node": "^25.0.2",
+    "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "husky": "^9.1.7",
     "prettier": "3.7.4",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.49.0"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.50.0"
   },
   "dependencies": {
     "@clack/prompts": "^0.11.0",
-    "@modelcontextprotocol/sdk": "^1.24.3"
+    "@modelcontextprotocol/sdk": "^1.25.0"
   }
 }
