--- a/package.json
+++ b/package.json
@@ -63,8 +63,10 @@
     "typescript-eslint": "^8.50.0"
   },
   "dependencies": {
+    "@apidevtools/swagger-parser": "^12.1.0",
     "@clack/prompts": "^0.11.0",
     "@modelcontextprotocol/sdk": "^1.25.0",
+    "ajv": "^8.17.1",
     "yaml": "^2.8.2"
   }
 }
