--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "typescript-eslint": "^8.50.0"
   },
   "dependencies": {
+    "@agentclientprotocol/sdk": "^0.12.0",
     "@apidevtools/swagger-parser": "^12.1.0",
     "@clack/prompts": "^0.11.0",
     "@modelcontextprotocol/sdk": "^1.25.0",
