--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
   "dependencies": {
     "@agentclientprotocol/sdk": "^0.12.0",
     "@apidevtools/swagger-parser": "^12.1.0",
-    "@clack/prompts": "^0.11.0",
+    "@clack/prompts": "1.0.0-alpha.8",
     "@modelcontextprotocol/sdk": "^1.25.0",
     "ajv": "^8.17.1",
     "yaml": "^2.8.2"
