chore: remove unused yaml package

--- a/package.json
+++ b/package.json
@@ -67,7 +67,6 @@
     "@apidevtools/swagger-parser": "^12.1.0",
     "@clack/prompts": "1.0.0-alpha.8",
     "@modelcontextprotocol/sdk": "^1.25.0",
-    "ajv": "^8.17.1",
-    "yaml": "^2.8.2"
+    "ajv": "^8.17.1"
   }
 }
