--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
     "@agentclientprotocol/sdk": "^0.12.0",
     "@apidevtools/swagger-parser": "^12.1.0",
     "@clack/prompts": "1.0.0-alpha.8",
-    "@modelcontextprotocol/sdk": "^1.25.0",
-    "ajv": "^8.17.1"
+    "@modelcontextprotocol/sdk": "^1.25.0"
   }
 }
