--- a/package.json
+++ b/package.json
@@ -63,7 +63,10 @@
     "typescript-eslint": "^8.50.0"
   },
   "dependencies": {
-    "@clack/prompts": "^0.11.0",
-    "@modelcontextprotocol/sdk": "^1.25.0"
+    "@agentclientprotocol/sdk": "^0.12.0",
+    "@apidevtools/swagger-parser": "^12.1.0",
+    "@clack/prompts": "1.0.0-alpha.8",
+    "@modelcontextprotocol/sdk": "^1.25.0",
+    "@zed-industries/claude-code-acp": "^0.13.0"
   }
 }
