--- a/package.json
+++ b/package.json
@@ -65,8 +65,10 @@
   "dependencies": {
     "@agentclientprotocol/sdk": "^0.12.0",
     "@apidevtools/swagger-parser": "^12.1.0",
-    "@clack/prompts": "1.0.0-alpha.8",
+    "@inquirer/prompts": "^8.2.0",
     "@modelcontextprotocol/sdk": "^1.25.0",
-    "@zed-industries/claude-code-acp": "^0.13.0"
+    "@zed-industries/claude-code-acp": "^0.13.0",
+    "chalk": "^5.6.2",
+    "ora": "^9.0.0"
   }
 }
